import outdent from 'outdent';
import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'globalThis',
		'globalThis.foo',
		'globalThis[foo]',
		'globalThis.foo()',
		'const { foo } = globalThis',
		'function foo (window) {}',
		'function foo (global) {}',
		'var foo = function foo (window) {}',
		'var foo = function foo (global) {}',
		'var window = {}',
		'let global = {}',
		'const global = {}',
		outdent`
			function foo (window) {
				window.foo();
			}
		`,
		outdent`
			var window = {};
			function foo () {
				window.foo();
			}
		`,
		'foo.window',
		'foo.global',
		'import window from "xxx"',
		'import * as window from "xxx"',
		'import window, {foo} from "xxx"',
		'export { window }  from "xxx"',
		'export * as window from "xxx";',
		outdent`
			try {

			} catch (window) {}
		`,

		// Use window specific APIs
		'window.name = "foo"',
		'window.addEventListener',
		'window.innerWidth',
		'window.innerHeight',
		'window.addEventListener("resize", () => {})',
		// A no-interpolation template literal event name is also window-specific
		'window.addEventListener(`resize`, () => {})',
		'window.removeEventListener(`resize`, () => {})',
		'window.onresize = function () {}',
		'\'open\' in window; window.open("https://example.com")',
		'`open` in window; window.open("https://example.com")',
		outdent`
			const {window} = jsdom()
			window.jQuery = jQuery;
		`,
		'({ foo: window.name } =  {})',
		'[window.name] = []',
		'window[foo]',
		'window[title]',
		'window["foo"]',

		// `typeof` existence checks are portable as-is
		'typeof window',
		'typeof window !== "undefined"',
		'typeof self !== "undefined"',
		'typeof global !== "undefined"',
		'typeof window === "undefined"',
		'typeof window === "object"',

		// TypeScript `typeof` type queries are not equivalent to `typeof globalThis`
		{code: 'type Window = typeof window;', languageOptions: {parser: parsers.typescript}},
		{code: 'let foo: typeof self;', languageOptions: {parser: parsers.typescript}},
		{code: 'type Foo = typeof window.foo;', languageOptions: {parser: parsers.typescript}},
		{code: 'type Foo = typeof window.foo.bar;', languageOptions: {parser: parsers.typescript}},
		{code: 'function foo(bar: typeof self.foo) {}', languageOptions: {parser: parsers.typescript}},
	],
	invalid: [
		'global',
		'self',
		'window',
		'window.foo',
		'window.foo()',
		'window > 10',
		'10 > window',
		'window ?? 10',
		'10 ?? window',
		'window.foo = 123',
		'window = 123',
		'obj.a = window',
		outdent`
			function* gen() {
			  yield window
			}
		`,
		outdent`
			async function gen() {
			  await window
			}
		`,
		'window ? foo : bar',
		'foo ? window : bar',
		'foo ? bar : window',
		outdent`
			function foo() {
			  return window
			}
		`,
		'new window()',
		outdent`
			const obj = {
				foo: window.foo,
				bar: window.bar,
				window: window
			}
		`,
		outdent`
			function sequenceTest() {
				let x, y;
				x = (y = 10, y + 5, window);
				console.log(x, y);
			}
		`,
		'window`Hello ${42} World`', // eslint-disable-line no-template-curly-in-string
		'tag`Hello ${window.foo} World`', // eslint-disable-line no-template-curly-in-string
		'var str = `hello ${window.foo} world!`', // eslint-disable-line no-template-curly-in-string
		'delete window.foo',
		'++window',
		'++window.foo',
		outdent`
			for (var attr in window) {

			}
		`,
		outdent`
			for (window.foo = 0; i < 10; window.foo++) {

			}
		`,
		outdent`
			for (const item of window.foo) {
			}
		`,
		outdent`
			for (const item of window) {
			}
		`,
		outdent`
			switch (window) {}
		`,
		outdent`
			switch (true) {
				case window:
					break;
			}
		`,
		outdent`
			switch (true) {
				case window.foo:
					break;
			}
		`,
		outdent`
			while (window) {
			}
		`,
		'do {} while (window) {}',
		'if (window) {}',
		'throw window',
		'var foo = window',
		outdent`
			function foo (name = window) {

			}
		`,
		'self.innerWidth',
		'self.innerHeight',
		'self.location',
		'self.navigator',
		'self.name',
		'self.postMessage("Hello")',
		'self.onconnect = function () {}',
		'self.onerror = function () {}',
		'self.onlanguagechange = function () {}',
		'self.onoffline = function () {}',
		'self.ononline = function () {}',
		'self.addEventListener("message", () => {})',
		'self.removeEventListener("message", () => {})',
		'self.dispatchEvent(new Event("message"))',
		'self.self',
		'self.onrejectionhandled = function () {}',
		'self.onunhandledrejection = function () {}',
		'\'postMessage\' in self',
		'window.crypto',
		'window.addEventListener("play", () => {})',
		'window.onplay = function () {}',
		'function greet({ name = window.foo }) {}',
		'({ foo: window.foo } =  {})',
		'[window.foo] = []',
		'foo[window]',
		'foo[window.foo]',
		'\'foo\' in window',
		'\'foo\' in global',
		'typeof window.something === "function"',
		'typeof self.something === "function"',
		'typeof global.something === "function"',
		'self[foo]',
		'global[foo]',
		// The type query is left as-is, but the value reference is still fixed
		{code: 'const foo: typeof window = window;', languageOptions: {parser: parsers.typescript}},
		// A shorthand property is both a value reference and a key, so only the value is replaced
		'const foo = {window};',
		'const foo = {window, self};',
		'foo({window});',
		'const foo = {[window]: 1};',
		'({window} = foo);',
		'({window = 1} = foo);',
	],
});

test.snapshot({
	testerOptions: {
		languageOptions: {
			globals: {global: 'off', window: 'off', self: 'off'},
		},
	},
	valid: [],
	invalid: [
		'global.global_did_not_declare_in_language_options',
		'window.window_did_not_declare_in_language_options',
		'self.self_did_not_declare_in_language_options',
	],
});
